Bug 413605 - No bouncy feedback cursor when opening apps
Summary: No bouncy feedback cursor when opening apps
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-x11-standalone (other bugs)
Version First Reported In: 5.17.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 413716 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-10-29 18:31 UTC by Nick Stefanov
Modified: 2019-11-01 22:26 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.17.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nick Stefanov 2019-10-29 18:31:42 UTC
SUMMARY
Launch feedback icon doesn't work at all after upgrade to Plasma 5.17. If I create a new user profile it works but doesn't work in my current profile. Enable/Disable it via System Settings UI doesn't work. Editing ~/.config/klaunchrc doesn't help no matter the settings. Here's my settings:

https://pastebin.com/7p6m55Hg

I tried different cursor themes including the default one (Breeze) to no avail. Feedback in panel works though.

STEPS TO REPRODUCE
1. Open a file/start an application.
2. 
3. 

OBSERVED RESULT
There's no launch feedback icon. The cursor doesn't change at all.

EXPECTED RESULT
To see some feedback from the cursor like bouncing icon which I use since KDE4.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.17.1
KDE Frameworks Version: 5.63.0
Qt Version: 5.13.1

ADDITIONAL INFORMATION
I also tried to change splash screen theme, desktop theme, window decoration theme, Look and Feel to no avail.
Comment 1 teds 2019-10-29 19:27:56 UTC
Same here, no cursor launch feedback icon.
Comment 2 iton88 2019-10-29 20:10:02 UTC
I can confirm bug too.
My system is also Arch x64 .
Comment 3 Nate Graham 2019-10-29 21:15:59 UTC
Does it return if you change the cursor size from "Resolution Independent" to some hardcoded size?
Comment 4 Nick Stefanov 2019-10-29 21:52:54 UTC
Yes, thank you!!! It didn't even crossed my mind :)
Comment 5 Nate Graham 2019-10-29 21:55:51 UTC
Yet another reason to just delete this setting: Bug 407749.
Comment 6 Nick Stefanov 2019-10-29 22:10:25 UTC
it's obviously problematic indeed :)
Comment 7 Nate Graham 2019-10-30 00:34:16 UTC
Kai, could this have regressed due to your change recently? Can we just get rid of the "Resolution Independent" cursor size setting?
Comment 8 iton88 2019-10-30 03:53:54 UTC
Thank you very much,guys for your quick answer with solution ! :)
Comment 9 Nate Graham 2019-11-01 19:59:31 UTC
Patch that fixes the issue: https://phabricator.kde.org/D25065
Comment 10 Patrick Silva 2019-11-01 20:16:30 UTC
*** Bug 413716 has been marked as a duplicate of this bug. ***
Comment 11 Nick Stefanov 2019-11-01 21:23:08 UTC
Thank you Nate!
Comment 12 Nate Graham 2019-11-01 21:41:53 UTC
Thank Kai, not me. ;)
Comment 13 Kai Uwe Broulik 2019-11-01 21:43:25 UTC
Git commit 87f36f53b3e64012bce2edc59f553341fc04cfc2 by Kai Uwe Broulik.
Committed on 01/11/2019 at 21:40.
Pushed by broulik into branch 'Plasma/5.17'.

[effects/startupfeedback] Fallback to small icon size when no cursor size is configured

As appears to be the case with the default setup...
FIXED-IN: 5.17.3

Differential Revision: https://phabricator.kde.org/D25065

M  +5    -1    effects/startupfeedback/startupfeedback.cpp

https://commits.kde.org/kwin/87f36f53b3e64012bce2edc59f553341fc04cfc2
Comment 14 Nick Stefanov 2019-11-01 22:19:32 UTC
Thank you Kai!
Comment 15 Kai Uwe Broulik 2019-11-01 22:26:29 UTC
You're welcome. Also sorry for breaking it in the first place :)