[effects/startupfeedback] Fallback to small icon size when no cursor size is configured

As appears to be the case with the default setup...

BUG: 413605
FIXED-IN: 5.17.3

Differential Revision: https://phabricator.kde.org/D25065