effects/startupfeedback/startupfeedback.cpp
@@ -27,6 +27,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include <QPainter>
 // KDE
 #include <KConfigGroup>
+#include <KIconLoader>
 #include <KSharedConfig>
 #include <KStartupInfo>
 #include <KSelectionOwner>
@@ -284,7 +285,10 @@ void StartupFeedbackEffect::start(const QString& icon)
         return cursorSize;
     };
     m_cursorSize = readCursorSize();
-    const int iconSize = m_cursorSize / 1.5;
+    int iconSize = m_cursorSize / 1.5;
+    if (!iconSize) {
+        iconSize = IconSize(KIconLoader::Small);
+    }
     // get ratio for bouncing cursor so we don't need to manually calculate the sizes for each icon size
     if (m_type == BouncingFeedback)
         m_bounceSizesRatio = iconSize / 16.0;
